# scalatron-x

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  ScalatronXAudioProcessorEditor.cpp
Source/: ScalatronCore.h  ScalatronXAudioProcessor.cpp  ScalatronXAudioProcessor.h  ScalatronXAudioProcessorEditor.h
